New option: browser can save user's submitted data for auto-fill.

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -3,6 +3,10 @@
   font-weight: 500;
 }
 
+.nf-ux-enhancements form {
+  max-width: 800px;
+}
+
 /* Reveal scrollbar in NinjaForms */
 .nf-ux-enhancements-scroll.toplevel_page_ninja-forms::-webkit-scrollbar { 
   display: block !important; background: #f1f1f1;
